# wifiscan

./: CMakeLists.txt  README.md  tw.idv.coolshou.wifiscanner.policy  wifiscan.desktop.in  wifiscan.qrc  wifiscan.rc
android/: AndroidManifest.xml
android/src/tw/idv/coolshou/: WifiService.java
debian/: README.Debian  README.source  changelog  control  copyright  rules
src/: Detail.qml  Main.qml  beacondetail.h  beaconfilterproxymodel.cpp  beaconfilterproxymodel.h  beaconmodel.cpp  beaconmodel.h  imageprovider.h  interfacemodel.h  main.cpp  qmlbeacondetail.cpp  qmlbeacondetail.h  utf8utils.cpp  utf8utils.h  wifi_scanner_jni.cpp  wifi_scanner_jni.h  wifiscanner.cpp  wifiscanner.h  wifiutils.cpp  wifiutils.h
